--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,6 +32,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: "guestbook/php-redis/"
           push: true
+          file: ./Dockerfile
           tags: reytans/guestbook-ng:v1
