Fix typo in github dir

--- a/guestbook/php-redis/.github/workflows/docker-image.yml
+++ b/guestbook/php-redis/.github/workflows/docker-image.yml
@@ -34,4 +34,4 @@ jobs:
           context: "guestbook/php-redis/"
           push: true
           file: ./Dockerfile
-          tags: reytans/guestbook-ng:v1
+          tags: reytans/guestbook-ng:sentinel-v1
