--- a/.github/workflows/dockerbuild.yaml
+++ b/.github/workflows/dockerbuild.yaml
@@ -8,6 +8,8 @@ on:
     paths:
       - guestbook/php-redis/**
 
+env: ${{ vars.IMAGE_NAME }}
+
 jobs:
   build-and-push-docker:
     runs-on: ubuntu-latest
@@ -26,7 +28,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ var.IMAGE_NAME }}
+          images: ${{ env.IMAGE_NAME }}
           flavor: latest=true
           tags: |
             type=ref,event=branch
