--- a/.github/workflows/dockerbuild.yaml
+++ b/.github/workflows/dockerbuild.yaml
@@ -50,5 +50,5 @@ jobs:
           context: ./guestbook/php-redis
           push: ${{ github.event_name != 'pull_request' }}
           file: ./guestbook/php-redis/Dockerfile
-          tags: ${{ github.run_number }},latest
+          tags: ${{ env.IMAGE_NAME }}:${{ github.run_number }},${{ env.IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
