--- a/guestbook/frontend-deployment.yaml
+++ b/guestbook/frontend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: php-redis
-        image: reytans/guestbook-ng:latest
+        image: reytans/guestbook-ng:v17
         resources:
           requests:
             cpu: 100m
